Socialnav alignment fixed

--- a/src/app/components/navbar/links/links.module.css
+++ b/src/app/components/navbar/links/links.module.css
@@ -31,7 +31,7 @@
       right: 0;
       width: 50%;
       height: calc(100vh - 100px);
-      background-color: white;
+      background-color: rgba(255, 255, 255, 0.75);
       display: flex;
       flex-direction: column;
       align-items: center;
